--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,12 +10,20 @@
           <!-- Makes POST request to /register route -->
           <form action="/register" method="POST">
             <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" name="username">
+              <label for="username">Username</label>
+              <input type="text" class="form-control" name="username">
             </div>
             <div class="form-group">
               <label for="password">Password</label>
               <input type="password" class="form-control" name="password">
+            </div>
+            <div class="form-group">
+              <label for="profile">Profile Name</label>
+              <input type="text" class="form-control" name="profile">
+            </div>
+            <div class="form-group">
+              <label for="address">Address</label>
+              <input type="text" class="form-control" name="address">
             </div>
             <button type="submit" class="btn btn-dark">Register</button>
           </form>
