--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 
 <div class="jumbotron centered">
   <div class="container">
-    <i class="fas fa-key fa-6x"></i>
+  <i class="fas fa-book fa-6x"></i>
     <h1 class="display-3">weBook</h1>
     <p class="lead">Silahkan tambahkan buku yang diinginkan!</p>
     <hr>
