--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,6 +7,10 @@ section {
   font-size: .875rem;
 }
 
+.table{
+  text-align: center;
+}
+
 .centered {
     padding-top: 200px;
     text-align: center;
