--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
   <div class="container">
   <i class="fas fa-book fa-6x"></i>
     <h1 class="display-3">weBook</h1>
-    <p class="lead">Silahkan tambahkan buku yang diinginkan!</p>
+    <p class="lead">Silahkan tambahkan buku yang terbaikmu!</p>
     <hr>
     <a class="btn btn-light btn-lg" href="/register" role="button">Register</a>
     <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
